--- a/Android/url-shortening/app.json
+++ b/Android/url-shortening/app.json
@@ -15,7 +15,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ff900f"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
